elkBurgers.css
html,
body {
    height: 100%;
}

body {
    background-image: url(https://images.unsplash.com/photo-1614853035986-b230d7d5679c?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2070&q=80);
    margin-left: 7em;
    margin-right: 7em;
}

h1 {
    text-align: center;
    font-size: 100px;
    margin-top: 40px;
}

h2 {
    font-size: 40px;
    padding-left: 0.5em;
}

.flexbox-container {
    display: flex;
    height: 15.5em;
    width: 34em;
    flex-direction: row;
    justify-content: space-around;
    border: 3px solid black;
    border-radius: 1.5%;
    font-size: 30px;
    margin-bottom: 0.03em;
}

.elkPicture {
    height: 15.5em;
    width: 1em;
    border-radius: 1%;
    flex-basis: 47%;
    margin-left: 0.15em;
}

.ingredients {
    max-height: 100%;
    height: 15em;
    font-size: 32.5px;
    padding-right: 2px;
    flex-basis: 70%;
}

.directionsWhole {
    border: 3px solid black;
    border-radius: 1.5%;
    padding-right: 1em;
    width: 39.9em;
    font-size: 25px;
    margin-bottom: -1.35em;
}

.subDirections {
    font-size: 22px;
    font-style: italic;
    padding-bottom: 0.7em;
}

.myThoughts {
    border: 3px solid rgb(30, 232, 15);
    border-radius: 1.5%;
    width: 51.2em;
    height: 6em;
    padding-top: 0.3em;
    font-size: 20px;
    text-align: center;
}

.myThoughtsText {
    font-style: italic;
    font-size: 22px;
}

.backToTop {
    position: relative;
    margin-top: 2em;
    margin-bottom: 1em;
}

